@@ -1,3 +1,7 @@
+2008-11-12 01:49-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* main.m: Copy headers only from target directories.  
+
 2008-11-10 19:14-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* main.m: Copy all headers since many xcode projects
